// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Recipes list component  render as expected when delete and edit icon are clicked  1`] = `
<RecipeList
  handleClick={[Function]}
  index="1"
  onDeleteIconClicked={[Function]}
  onEditIconCliked={[Function]}
  onFavIconClicked={[Function]}
  recipes={
    Array [
      Object {
        "category": "",
        "downVotes": 1,
        "id": 1,
        "name": "recipe",
        "upVotes": 1,
        "views": 1,
      },
    ]
  }
  type="createdRecipes"
>
  <List
    className="recipe-list"
    style={Object {}}
  >
    <div
      className="col-12 recipe-list"
      style={Object {}}
    >
      <h4
        className="display-4 bold header"
      >
        my recipes
      </h4>
      <ListItem
        className="recipe-list-item"
        content="recipe"
        handleClick={[Function]}
        index={0}
        key="1"
      >
        <div
          className="lead list-item recipe-list-item"
        >
          <div
            className="list-item-text lead"
            data-index={0}
            onClick={[Function]}
            role="button"
            tabIndex="0"
          >
            recipe
          </div>
          <div>
            <Icon
              active=""
              className=""
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-pencil edit-icon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={true}
            >
              <div
                className="icon-wrapper pointer"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-pencil edit-icon"
                  data-target=""
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
            <Icon
              active=""
              className=""
              dataTarget="#modal"
              dataToggle="modal"
              handleClick={[Function]}
              iconClass="fa fa-trash-o delete-icon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={true}
            >
              <div
                className="icon-wrapper pointer"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-trash-o delete-icon"
                  data-target="#modal"
                  data-toggle="modal"
                >
                  <span />
                </i>
              </div>
            </Icon>
          </div>
        </div>
      </ListItem>
    </div>
  </List>
</RecipeList>
`;

exports[`Recipes list component  render as expected when delete and edit icon are clicked  2`] = `
<RecipeList
  handleClick={[Function]}
  index="1"
  onDeleteIconClicked={[Function]}
  onEditIconCliked={[Function]}
  onFavIconClicked={[Function]}
  recipes={
    Array [
      Object {
        "category": "",
        "downVotes": 1,
        "id": 1,
        "name": "recipe",
        "upVotes": 1,
        "views": 1,
      },
    ]
  }
  type="createdRecipes"
>
  <List
    className="recipe-list"
    style={Object {}}
  >
    <div
      className="col-12 recipe-list"
      style={Object {}}
    >
      <h4
        className="display-4 bold header"
      >
        my recipes
      </h4>
      <ListItem
        className="recipe-list-item"
        content="recipe"
        handleClick={[Function]}
        index={0}
        key="1"
      >
        <div
          className="lead list-item recipe-list-item"
        >
          <div
            className="list-item-text lead"
            data-index={0}
            onClick={[Function]}
            role="button"
            tabIndex="0"
          >
            recipe
          </div>
          <div>
            <Icon
              active=""
              className=""
              dataTarget=""
              dataToggle=""
              handleClick={[Function]}
              iconClass="fa fa-pencil edit-icon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={true}
            >
              <div
                className="icon-wrapper pointer"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-pencil edit-icon"
                  data-target=""
                  data-toggle=""
                >
                  <span />
                </i>
              </div>
            </Icon>
            <Icon
              active=""
              className=""
              dataTarget="#modal"
              dataToggle="modal"
              handleClick={[Function]}
              iconClass="fa fa-trash-o delete-icon"
              onMouseEnter={[Function]}
              parentClass=""
              pointer={true}
            >
              <div
                className="icon-wrapper pointer"
                onClick={[Function]}
                onMouseEnter={[Function]}
                role="button"
                tabIndex="0"
              >
                <i
                  className="icon fa fa-trash-o delete-icon"
                  data-target="#modal"
                  data-toggle="modal"
                >
                  <span />
                </i>
              </div>
            </Icon>
          </div>
        </div>
      </ListItem>
    </div>
  </List>
</RecipeList>
`;

exports[`Recipes list component  to match empty snapshot  1`] = `
<List
  className="recipe-list"
  style={Object {}}
>
  <h4
    className="display-4 bold header"
  >
    my recipes
  </h4>
  <ListItem
    className="recipe-list-item"
    content="recipe"
    handleClick={[Function]}
    index={0}
    key="1"
  >
    <div>
      <Icon
        active=""
        className=""
        dataTarget=""
        dataToggle=""
        handleClick={[Function]}
        iconClass="fa fa-pencil edit-icon"
        onMouseEnter={[Function]}
        parentClass=""
        pointer={true}
      />
      <Icon
        active=""
        className=""
        dataTarget="#modal"
        dataToggle="modal"
        handleClick={[Function]}
        iconClass="fa fa-trash-o delete-icon"
        onMouseEnter={[Function]}
        parentClass=""
        pointer={true}
      />
    </div>
  </ListItem>
</List>
`;
